archive/__before_move/old/apps/networking/speedtest-plotter/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: networking
  labels:
    app: speedtest-plotter
  name: speedtest-plotter
  annotations:
    kubernetes.io/ingress.class: nginx
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: ${SECRET_DNS_TARGET}
    hajimari.io/enable: "true"
    hajimari.io/icon: speedometer
spec:
  tls:
    - secretName: ${SECRET_DOMAIN_ME//./-}-tls
      hosts:
        - speed.${SECRET_DOMAIN_ME}
  rules:
    - host: speed.${SECRET_DOMAIN_ME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest-plotter
                port:
                  number: 8000
